# rust-visualizer

crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/image-visualizer/: Cargo.toml  README.md
crates/image-visualizer/src/: lib.rs
crates/visualizer/: Cargo.toml  README.md
crates/visualizer-cli/: Cargo.toml  README.md
crates/visualizer-cli/src/: debug_visualizer_app.rs  lib.rs  rpc.rs  rpc_trait.rs
crates/visualizer-cli/web/: package.json  tsconfig.json  webpack.config.ts
crates/visualizer-cli/web/src/: index.tsx
crates/visualizer-cli/web/src/model/: bridge.ts  index.ts  visualizations.ts
crates/visualizer/src/: lib.rs  rpc_trait.rs  visualizable.rs  visualizations.rs
data/: data1.json  data2.json  data3.json
