[package]
name = "visualizer-cli"
version = "0.1.2"
authors = ["Henning Dieterichs <henning.dieterichs@live.de>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "web/dist/bundle.zip",
    "docs/**/*"
]
license = "MIT"
repository = "https://github.com/hediet/rust-visualizer/"
description = "Shows a visualization of supported values in a new window."

[dependencies]
wry = "0.6"
structopt = "0.3.21"
url = "2.2.1"
serde = "1.0.125"
serde_json = { version = "1.0.64", features = ["raw_value"] }
futures = "0.3.13"
async-std = "1.9.0"
jsonrpc-stdio-server = "17.0.0"
jsonrpc-derive = "17.0.0"
jsonrpc-core = "17.0.0"
jsonrpc-core-client = "17.0.0"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.48"
zip = "0.5.11"
